--- a/.gitignore
+++ b/.gitignore
@@ -128,7 +128,7 @@ buildNumber.properties
 .flattened-pom.xml
 
 ### VisualStudioCode ###
-.vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
